# BiLiBiLi_DanMu_Crawling

./: .gitattributes  .gitignore  .gitmodules  404.html  Dockerfile  HX配置文件.ini  LICENSE  README.md  about.html  about.txt  build.sh  cleanup.bat  crawl.html  crawl.txt  dmHandle.html  dmHandle.txt  docker-compose.yaml  index.html  index.txt  main.py  main.spec  requirements.txt  setting.html  setting.txt  v251danmu.py  v261danmu.py  v263danmu.py  v271danmu.py  v272danmu.py  v288danmu.py  year_family_state.json
.github/workflows/: deploy.yaml
404/: index.html
_next/static/8Rwnc4T5U-Wjzruo8cP0O/: _buildManifest.js
_next/static/UYK5gBsPgglhDe7ZMDgml/: _buildManifest.js
_next/static/chunks/: 151-8181e1f52a1cbb1d.js  191-5273afe1043391cf.js  (+28 more)
about/: index.html  index.txt
config/: config.json
cpp/: CMakeLists.txt
cpp/include/HXLibs/container/: ArrayBuf.hpp  FutureResult.hpp  MoveApply.hpp  MoveOnlyFunction.hpp  NonVoidHelper.hpp  RadixTree.hpp  SafeQueue.hpp  ThreadPool.hpp  Uninitialized.hpp  UninitializedNonVoidVariant.hpp
cpp/include/HXLibs/coroutine/awaiter/: ExitAwaiter.hpp  PreviousAwaiter.hpp  StopAwaiter.hpp  WhenAny.hpp
cpp/include/HXLibs/coroutine/concepts/: Awaiter.hpp
cpp/include/HXLibs/coroutine/loop/: EventLoop.hpp  TimerLoop.hpp
cpp/include/HXLibs/coroutine/promise/: Promise.hpp
cpp/include/HXLibs/coroutine/task/: AioTask.hpp  RootTask.hpp  Task.hpp
cpp/include/HXLibs/exception/: ErrorHandlingTools.hpp  ExceptionMode.hpp  SslException.hpp
cpp/include/HXLibs/log/: Log.hpp
cpp/include/HXLibs/log/serialize/: FormatString.hpp  ToString.hpp
cpp/include/HXLibs/net/: Api.hpp
cpp/include/HXLibs/net/client/: HttpClient.hpp  HttpClientOptions.hpp
cpp/include/HXLibs/net/protocol/http/: Http.hpp  MimeType.hpp  PathVariable.hpp  Request.hpp  Response.hpp  Status.hpp
cpp/include/HXLibs/net/protocol/https/: Context.h  Https.hpp
cpp/include/HXLibs/net/protocol/proxy/: ProxyBase.h  SocksProxy.h
cpp/include/HXLibs/net/protocol/url/: UrlParse.hpp
cpp/include/HXLibs/net/protocol/websocket/: WebSocket.h
cpp/include/HXLibs/net/router/: RequestParsing.hpp  Router.hpp  RouterTree.hpp
cpp/include/HXLibs/net/server/: Acceptor.hpp  ConnectionHandler.hpp  HttpServer.hpp
cpp/include/HXLibs/net/socket/: AddressResolver.hpp  IO.hpp  SocketFd.hpp
cpp/include/HXLibs/platform/: EventLoopApi.hpp  LocalFdApi.hpp  SocketFdApi.hpp
cpp/include/HXLibs/reflection/: MemberCount.hpp  MemberMacro.hpp  MemberName.hpp
cpp/include/HXLibs/reflection/json/: JsonWrite.hpp
cpp/include/HXLibs/utils/: ContainerConcepts.hpp  FileUtils.hpp  NumericBaseConverter.hpp  StringUtils.hpp  TimeNTTP.hpp  TypeTraits.hpp
cpp/include/pojo/: BasDanMaKu.hpp  DanMaKu.hpp
cpp/src/: app.cpp
crawl/: index.html  index.txt
dev/: todo.md
dmHandle/: index.html  index.txt
gui/: credentialManager.py  fileProcessorWindow.py  getCidWindow.py  mainWindow.py  mainWindowUi.py  tkcalendar.py
gui/api/: danMaKuApi.py  reqDataSingleton.py  videoApi.py
gui/utils/: configUtils.py  danMaKuXmlUtils.py  test.py  yearDaysUitls.py
py/: .gitignore  CHANGELOG  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
py/src/api/: danMaKuApi.py  videoApi.py
py/src/api/pb/: __init__.py  basDm_pb2.py
py/src/bilibili_danmu_crawling/: __main__.py
py/src/bilibili_danmu_crawling/src/api/: danMaKuApi.py  videoApi.py
py/src/bilibili_danmu_crawling/src/api/pb/: dm.proto  dm_pb2.py
py/src/bilibili_danmu_crawling/src/controller/: videoInfoController.py
py/src/bilibili_danmu_crawling/src/fileUtils/: allTaskData.py  dirUtils.py  jsonConfig.py
py/src/bilibili_danmu_crawling/src/info/: version.py
py/src/bilibili_danmu_crawling/src/pojo/vo/: ResponseModel.py  WebSocketVo.py
py/src/bilibili_danmu_crawling/src/tasks/: AllDmRequests.py
py/src/bilibili_danmu_crawling/src/utils/: basePath.py  cidUtils.py
py/src/controller/: allDmReqController.py  basicInfoController.py  mainConfigController.py  videoInfoController.py
py/src/fileUtils/: danMaKuSqlite3.py  danMaKuXml.py  jsonConfig.py
py/src/info/: version.py
py/src/pojo/vo/: AllTaskDataVo.py  ResponseModel.py
py/src/task/: allDmReq.py
py/src/tasks/: AllDmRequests.py
py/src/utils/: baseDirUtils.py  basePath.py  cidUtils.py  danMaKuXmlUtils.py  singletonTemplate.py  timeString.py
py/src_old/api/: danMaKuApi.py  reqDataSingleton.py
py/src_old/api/pb/: basDm.proto
py/src_old/test/: duplicateRemoval.py
py/src_old/utils/: configUtils.py  yearDaysUtils.py
py/tests/: DanMaKuApiTest.py  Include.py  allDmReqTaskTest.py  danMaKuSqlite3Test.py  jsonConfigTest.py  upAllDm.py  videoApiTest.py  webWsTest.py
setting/: index.html  index.txt
src/: mainWindow.py
src/api/: danMaKuApi.py
src/info/: version.py
src/utils/: configUtils.py  danMaKuXmlUtils.py  xmlEscapeUtils.py
test/: sugaku.py
web/: .npmrc  README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
web-frontend/: package-lock.json  package.json
web-frontend/src/: App.tsx
web/app/: layout.tsx  page.tsx  providers.tsx
web/components/: client-only.tsx  counter.tsx  icons.tsx  navbar.tsx  ping.tsx  theme-switch.tsx
web/config/: env.ts  site.ts  toast.ts
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/icons/: icon.icns
web/styles/: globals.css
(+36 files in other folders)
