[project]
name = "bilibili-danmu-crawling"
version = "2.0.0-beta20"
description = "B站全弹幕爬虫"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "fastapi>=0.116.1",
    "orjson>=3.11.0",
    "protobuf>=6.31.1",
    "pyinstaller>=6.15.0",
    "requests>=2.32.4",
    "uvicorn[standard]>=0.35.0",
]
